# logtest

./: README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  jnigen.yaml  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/logtest_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: logtest.podspec
ios/Classes/: logtest.c
lib/src/: log.dart  log_impl.dart
src/logtest/: CMakeLists.txt  logtest.c
